# Tycode

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dev.sh  dist-workspace.toml
.config/: nextest.toml
.github/workflows/: ci.yml  package-vscode.yml  release.yml  vscode-release.yml
tycode-bench/: Cargo.toml
tycode-bench/scenarios/leetcode_21/: Cargo.toml
tycode-bench/scenarios/leetcode_21/src/: lib.rs  node.rs
tycode-bench/scenarios/leetcode_21/tests/: tests.rs
tycode-bench/scenarios/modify_file_easy/src/: lib.rs
tycode-bench/scenarios/modify_file_hard/src/: lib.rs
tycode-bench/scenarios/modify_file_stress/: Cargo.toml
tycode-bench/scenarios/modify_file_stress/src/: lib.rs
tycode-bench/src/: driver.rs  fixture.rs  leetcode_21.rs  main.rs  modify_file_stress.rs  settings.rs
tycode-cli/: Cargo.toml
tycode-cli/src/: auto.rs  auto_driver.rs  auto_pr.rs  banner.rs  commands.rs  github.rs  interactive_app.rs  main.rs  state.rs
tycode-cli/src/autocomplete/: completer.rs  helper.rs  mod.rs  renderer.rs
tycode-cli/src/tui/: app.rs  event_handler.rs  input_handler.rs  mod.rs  state.rs  ui.rs
tycode-cli/src/tui/widgets/: chat_panel.rs  input_area.rs  mod.rs  status_bar.rs
tycode-client-typescript/: index.ts  package-lock.json  package.json  tsconfig.json
tycode-core/: Cargo.toml  DEVELOPMENT.md
tycode-core/src/: formatter.rs  lib.rs  module.rs  security.rs
tycode-core/src/agents/: agent.rs  auto_pr.rs  builder.rs  catalog.rs  code_review.rs  coder.rs  context.rs  coordinator.rs  custom.rs  debugger.rs  defaults.rs  discovery.rs  file_impl.rs  file_writer.rs  memory_manager.rs  memory_summarizer.rs  mod.rs  one_shot.rs  plan_judge.rs  planner.rs  recon.rs  runner.rs  swarm.rs  tool_type.rs  tycode.rs
tycode-core/src/ai/: bedrock.rs  claude_code.rs  codex_cli.rs  error.rs  json.rs  mantle.rs  mock.rs  mod.rs  model.rs  openrouter.rs  provider.rs  tests.rs  tweaks.rs  types.rs
tycode-core/src/analyzer/: get_type_docs.rs  mod.rs  rust_analyzer.rs  search_types.rs
tycode-core/src/chat/: actor.rs  ai.rs  commands.rs  events.rs  json_tool_parser.rs  mod.rs  protocol.rs  request.rs  state.rs  tests.rs  tool_extraction.rs  tools.rs  xml_tool_parser.rs
tycode-core/src/chat/context/: mod.rs
tycode-core/src/cmd/: mod.rs
tycode-core/src/context/: command_outputs.rs  file_tree.rs  memories.rs  mod.rs  tasks.rs  tracked_files.rs
tycode-core/src/file/: access.rs  config.rs  context.rs  find.rs  ignore.rs  manager.rs  mod.rs  read_only.rs  resolver.rs  workspace.rs
tycode-core/src/file/modify/: apply_codex_patch.rs  cline_replace_in_file.rs  command.rs  delete_file.rs  mod.rs  replace_in_file.rs  write_file.rs
tycode-core/src/file/search/: list_files.rs  mod.rs  read_file.rs  search_files.rs
tycode-core/src/formatter/: compact.rs  mod.rs  verbose.rs
tycode-core/src/mcp/: client.rs  command.rs  mod.rs  tests.rs  tool.rs
tycode-core/src/memory/: mod.rs
tycode-core/src/modules/: execution.rs  mod.rs  task_list.rs
tycode-core/src/modules/context_management/: command.rs  config.rs  mod.rs  planner.rs
tycode-core/src/modules/execution/: config.rs  mod.rs
tycode-core/src/modules/image/: config.rs  mod.rs
tycode-core/src/modules/memory/: background.rs  command.rs  compaction.rs  config.rs  context.rs  log.rs  mod.rs  prompt.rs  tool.rs
tycode-core/src/modules/review/: command.rs  diff.rs  mod.rs
tycode-core/src/orchestration/: events.rs  mod.rs
tycode-core/src/persistence/: mod.rs  session.rs  storage.rs
tycode-core/src/plugin/: agents.rs  commands.rs  discovery.rs  executor.rs  hooks.rs  installer.rs  manager.rs  manifest.rs  mod.rs  types.rs
tycode-core/src/plugin/native/: abi.rs  loader.rs  mod.rs
tycode-core/src/prompt/: autonomy.rs  communication.rs  mod.rs  style.rs  tools.rs
tycode-core/src/review/: service.rs
tycode-core/src/security/: manager.rs  mod.rs  types.rs
tycode-core/src/settings/: config.rs  manager.rs  mod.rs  tests.rs
tycode-core/src/skills/: command.rs  context.rs  discovery.rs  mod.rs  parser.rs  prompt.rs  tool.rs  types.rs
tycode-core/src/spawn/: complete_task.rs  mod.rs  spawn_agent.rs
tycode-core/src/steering/: autonomy.rs  communication.rs  mod.rs  style.rs  tools.rs
tycode-core/src/tools/: ask_user_question.rs  complete_task.rs  fuzzy_json.rs  mod.rs  registry.rs  run_build_test.rs  trait.rs
tycode-core/src/tools/analyzer/: get_type_docs.rs  mod.rs  search_types.rs
tycode-core/src/tools/file/: BENCHMARKS.md  apply_codex_patch.rs  apply_patch.rs  delete_file.rs  list_files.rs  mod.rs  read_file.rs  replace_in_file.rs  search_files.rs  set_tracked_files.rs  write_file.rs
tycode-core/src/tools/mcp/: client.rs  manager.rs  mod.rs  tests.rs  tool.rs
tycode-core/src/tools/memory/: append_memory.rs  mod.rs
tycode-core/src/tools/spawn/: mod.rs  spawn_agent.rs  spawn_coder.rs  spawn_recon.rs
tycode-core/src/tools/tasks/: manage_task_list.rs  mod.rs  propose_task_list.rs  update_task_list.rs
tycode-core/src/voice/: mod.rs
tycode-core/src/voice/audio/: capture.rs  mod.rs  playback.rs
tycode-core/src/voice/stt/: aws_transcribe.rs  elevenlabs_transcribe.rs  mod.rs  provider.rs  types.rs
tycode-core/src/voice/tts/: aws_polly.rs  elevenlabs.rs  mod.rs  provider.rs  types.rs
tycode-core/tests/: TESTING.MD  agent.rs  basic.rs  cancellation.rs  commands.rs  compaction.rs  context.rs  custom_agent_spec.rs  fixture.rs  images.rs  mcp.rs  memory.rs  modules.rs  profiles.rs  run_build_test.rs  runner.rs  rust_analyzer.rs  sessions.rs  settings_schema.rs  steering.rs  task_list.rs  tool_protocol.rs  voice.rs
tycode-core/tests/modules/: context_management.rs  execution.rs  file.rs  image.rs  memory.rs  orchestration.rs  review.rs  spawn.rs  spawn_task_list.rs  task_list.rs
tycode-core/tests/modules/file/: modify.rs  read_only.rs  search.rs
tycode-subprocess/: Cargo.toml
tycode-subprocess/src/: lib.rs  main.rs
tycode-subprocess/tests/: version.rs
tycode-vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  webpack.config.js
(+28 files in other folders)
