[workspace]
members = ["tycode-core", "tycode-cli", "tycode-subprocess"]
resolver = "2"
# Note: tycode-vscode is a TypeScript/JavaScript project and not part of the Rust workspace

[workspace.dependencies]
# Async and concurrency  
tokio = { version = "1.36.0", features = ["macros", "sync", "time", "rt", "rt-multi-thread", "fs", "process", "io-util"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# AWS SDK dependencies
aws-config = { version = "1.1.1", features = ["credentials-process"] }
aws-sdk-bedrockruntime = "1.105.0"
aws-sdk-cloudwatchlogs = "1.4.0"
aws-sdk-dsql = "1.1"
aws-sdk-sts = "1.4.0"
aws-smithy-types = { version = "1", features = ["serde-deserialize","serde-serialize"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
similar = "2.4"
sha2 = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System dependencies
dirs = "5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
