[package]
name = "tycode-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tycode-core = { path = "../tycode-core" }
tempfile = "3.10"
fs_extra = "1.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2.25", features = ["env-filter", "fmt"] }

[package.metadata.dist]
dist = false