[package]
name = "tycode-cli"
version = "0.5.2"
edition = "2021"
authors = ["tigy"]
description = "CLI interface for TyCode"
license = "MIT"
repository = "https://github.com/tigy32/Tycode" 

[[bin]]
name = "tycode"
path = "src/main.rs"

[dependencies]
# Core functionality
tycode-core = { path = "../tycode-core" }

# Async runtime
tokio = { workspace = true }

# CLI dependencies
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
terminal_size = "0.4"

# Utilities
anyhow = { workspace = true }
dirs = "5.0"
rustyline = "15"

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2.4"

# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
futures = "0.3"

