[package]
name = "tycode-core"
version = "0.1.0"
edition = "2021"
authors = ["tigy"]
description = "Core chat actor and AI functionality for TyCode"
license = "MIT"
repository = "https://github.com/tigy32/Tycode" 

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
# Core dependencies
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
base64 = { workspace = true }
similar = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "process"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# MCP dependencies
rmcp = { version = "0.2", features = ["transport-child-process", "client"] }
async-channel = "2.1"

# File operations
regex = { version = "1.10" }
walkdir = { version = "2.4" }
dirs = { version = "5.0" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

aws-config = { version = "1.1.1", features = ["credentials-process"] }
aws-sdk-bedrockruntime = "1.105.0"
aws-smithy-types = { version = "1", features = ["serde-deserialize", "serde-serialize"] }
aws-smithy-async = { version = "1" }
aws-smithy-runtime-api = { version = "1" }
aws-smithy-http = { version = "0.60" }

[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = "0.3"
