[package]
name = "tycode-subprocess"
version = "0.1.0"
edition = "2021"
authors = ["tigy"]
description = "Subprocess logic for TyCode"

[dependencies]
# Core functionality
tycode-core = { path = "../tycode-core" }

# Async runtime
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { version = "0.4", features = [
    "serde"
] }

# Session ID
ulid = "1.1"