[package]
name = "tycode-subprocess"
version = "0.3.3"
edition = "2021"
authors = ["tigy"]
description = "Subprocess logic for TyCode"
license = "MIT"
repository = "https://github.com/tigy32/Tycode" 

[dependencies]
# Core functionality
tycode-core = { path = "../tycode-core" }

# Async runtime
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
dirs = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { version = "0.4", features = [
    "serde"
] }

# Session ID
ulid = "1.1"